--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "eleventy",
-    "dev": "eleventy --serve"
+    "build": "eleventy --output=docs",
+    "dev": "eleventy --serve --output=docs"
   },
   "keywords": [],
   "author": "",
